--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -132,7 +132,7 @@ FullScr=0     ; start at full-screen. windowed mode can be used only for
 Refresh=0     ; monitor refresh rate in fullscreen mode (0-default).
               ; for video=resampler, the more - the better
 
-Border=3	  ; border size - 0: 256x192, 1: 320x200, 2: 320x240, 3: 360x288, 4: 384x304, 5: 448x320
+Border=5	  ; border size - 0: 256x192, 1: 320x200, 2: 320x240, 3: 360x288, 4: 384x304, 5: 448x320
 NoFlic=0      ; apply noflic filter
 AltNoFlic=0   ; use interlaced algorithm for video=double
 FlashColor=0  ;
@@ -286,7 +286,7 @@ RamSize=2048    ; ngs ram size 2048, 4096
 
 [ZC]            ; Z-Controller settings
 ; sdcard image
-SDCARD=d:\VM\ZX\wc.hdd
+SDCARD=d:\VM\ZX\wc.img
 
 
 [SAA1099]
@@ -383,7 +383,7 @@ CDROM=;ASPI;SPTI  ; SPTI (native WinNT) or ASPI (use 3rd-party library wnaspi32.
 ; for image file, specify filename with full path, else it'll not work
 
 ; master device. specify image filename or <MODEL,SERIAL> to use real drive
-Image0=d:\VM\ZX\wc.hdd
+Image0=d:\VM\ZX\wc.img
 CHS0=1572/16/63  ; max size, accessible through CHS. not used for real drive
 LBA0=0	     ; max size, accessible through LBA. not used for real drive
 HD0RO=0         ; read only flag
