WC: added new INI features, fixed bug with PB, increased video buffer in plug-in system.

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -1,4 +1,6 @@
-Wild Commander configuration file v0.1
+Wild Commander configuration file v0.2
+
+[PLUGINS]
 MOUNTER .WMF
 FILE_CR .WMF
 ROM_PROG.WMF
@@ -7,6 +9,14 @@ GSPLAYER.WMF
 VIDEO_PL.WMF
 BMPV    .WMF
 SCRSAVER.WMF
+
+[LPANEL]
+DRV=0; 0-IDEnemo, 1-SDzc, 2-SDngs
+INFO=1; file info (0 - disable, 1 - enable)
+
+[RPANEL]
+DRV=0; 0-IDEnemo, 1-SDzc, 2-SDngs
+INFO=1; file info (0 - disable, 1 - enable)
 
 ;this file and all plug-ins must be placed into WC folder (in root dir of Boot-Device)
 ;данный файл и все плагины нужно разместить в папке WC (в корне загрузочного устройства, которое выбирается в ts-bios'e)
