--- a/pentevo/unreal/Unreal/Unreal.vcproj
+++ b/pentevo/unreal/Unreal/Unreal.vcproj
@@ -270,6 +270,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\depack.cpp"
+				>
+			</File>
+			<File
 				RelativePath="draw.cpp"
 				>
 			</File>
@@ -781,6 +785,10 @@
 			</File>
 			<File
 				RelativePath=".\defs.h"
+				>
+			</File>
+			<File
+				RelativePath=".\depack.h"
 				>
 			</File>
 			<File
