Unreal: added ULA+

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -17,6 +17,8 @@ HIMEM=TSL
 ; ATM450: 512/1024, profi: 1024 only
 RAMSize=4096
 
+ULAPLUS=1
+
 TapeTraps=1
 ; start tape on ROM load routine
 TapeAutoStart=1
