Unreal: added 512kB ROM mapping in TSL memory model

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -428,11 +428,10 @@ PROFROM=rom\scorp_prof401.ROM:0
 KAY=rom\kay1024.rom
 
 ; TS-config
-TSL=rom\ts-bios.rom
+TSL=rom\zxevo.rom
 
 ; you can create own 64K-ROMSET, naming ini section [ROM.my_own_set]
 ; for empty ROMSET, single-file large ROM used (accordingly to memory model)
-; ROMSET=GLUK
 ROMSET=
 
 [ROM.default]
@@ -510,14 +509,6 @@ sos=rom\zxevo.rom:0
 dos=rom\zxevo.rom:13
 128=rom\zxevo.rom:2
 sys=rom\zxevo.rom:3
-
-[ROM.TSL]
-title=TSL
-sys=rom\ts-bios.rom:0
-dos=rom\ts-bios.rom:1
-128=rom\ts-bios.rom:2
-sos=rom\ts-bios.rom:3
-
 
 [LEDS]
 ; enable leds
