Unreal: removed obsolete code, fixed crashes in debugger, neaten setup dialogs

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -295,42 +295,33 @@ BEGIN
     COMBOBOX        IDC_MODEM,37,138,154,80,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_VIDEO DIALOGEX 0, 0, 186, 160
+IDD_VIDEO DIALOGEX 0, 0, 213, 161
 STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_BORDER
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LTEXT           "Renderer",IDC_STATIC,7,22,38,8
-    COMBOBOX        IDC_VIDEOFILTER,62,20,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_VIDEOFILTER,89,20,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Diplay Driver",IDC_REND_TITLE,7,9,41,8
-    COMBOBOX        IDC_RENDER,62,7,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "&low quality",IDC_FAST_SL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,62,142,46,10
-    CONTROL         "&Update border for all filters",IDC_UPDB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,73,103,10
-    CONTROL         "VS&ync",IDC_FLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,86,32,10
-    CONTROL         "Flash-&Color",IDC_FLASH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,113,50,10
-    CONTROL         "&Noflic",IDC_NOFLIC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,127,34,10
-    CONTROL         "method&#2",IDC_ALT_NOFLIC,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,47,127,49,10
+    COMBOBOX        IDC_RENDER,89,7,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "VS&ync",IDC_FLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,75,32,10
+    CONTROL         "Flash-&Color",IDC_FLASH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,93,50,10
+    CONTROL         "&Noflic",IDC_NOFLIC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,130,34,10
+    CONTROL         "method&#2",IDC_ALT_NOFLIC,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,45,130,49,10
     LTEXT           "&Skipframe",IDC_STATIC,116,74,34,8
-    EDITTEXT        IDE_SKIP1,155,71,24,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDE_SKIP1,182,71,24,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Skipframe on &Maxspeed",IDC_STATIC,74,86,77,8
-    EDITTEXT        IDE_SKIP2,155,84,24,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDE_SKIP2,182,84,24,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "min Y-&resolution",IDC_STATIC,100,99,50,8
-    EDITTEXT        IDE_MINX,155,97,24,14,ES_AUTOHSCROLL
+    EDITTEXT        IDE_MINX,182,97,24,14,ES_AUTOHSCROLL
     LTEXT           "scanlines &intensity",IDC_STATIC,93,114,58,8
-    EDITTEXT        IDE_SCBRIGHT,155,112,24,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "fir setup&...",IDC_FIR,7,127,50,14
-    PUSHBUTTON      "f&ont setup...",IDC_FONT,7,127,50,14
-    LTEXT           "font &height",IDC_FNTTITLE,103,130,35,8
-    COMBOBOX        IDC_FONTHEIGHT,142,127,38,80,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "scale &video",IDC_VSCALE_TITLE1,79,128,38,8
-    CONTROL         "",IDC_VIDEOSCALE,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,115,128,64,12
-    LTEXT           "1x",IDC_VSCALE_TITLE2,117,141,8,8
-    LTEXT           "4x",IDC_VSCALE_TITLE3,167,141,8,8
-    COMBOBOX        IDC_SCRSHOT,45,95,41,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "scrshot to",IDC_REND_TITLE2,7,97,32,8
-    COMBOBOX        IDC_PALETTE,54,54,125,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDE_SCBRIGHT,182,112,24,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_SCRSHOT,165,128,41,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "scrshot to",IDC_REND_TITLE2,103,130,32,8
+    COMBOBOX        IDC_PALETTE,81,54,125,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "pale&tte",IDC_STATIC,7,56,31,8
-    COMBOBOX        IDC_BORDERSIZE,62,34,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_BORDERSIZE,89,34,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Window Size",IDC_B_TITLE2,7,36,49,8
+    CONTROL         "ULA-Plus",IDC_ULAPLUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,105,50,10
 END
 
 IDD_EFF7 DIALOG 0, 0, 203, 126
@@ -531,27 +522,6 @@ BEGIN
     LISTBOX         IDC_LABELS,7,26,172,126,LBS_NOINTEGRALHEIGHT | LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_FIR DIALOGEX 0, 0, 168, 125
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Frame Resampler video filter settings"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
-BEGIN
-    GROUPBOX        "filter mode",IDC_FRAME,7,3,154,56
-    CONTROL         "simple &average",IDC_SIMPLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,15,14,63,10
-    CONTROL         "&fir interpolation",IDC_FIR0,"Button",BS_AUTORADIOBUTTON,15,24,61,10
-    CONTROL         "fir + low-pass filter for &gigascreen noflic",IDC_FIR1,
-                    "Button",BS_AUTORADIOBUTTON,15,35,137,10
-    CONTROL         "fir + low-pass filter for &3-color noflic",IDC_FIR2,
-                    "Button",BS_AUTORADIOBUTTON,15,45,123,10
-    GROUPBOX        "frames used for interpolation",IDC_FRAMES_BOX,7,62,154,36
-    CONTROL         "",IDC_FRAMES,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,11,70,148,17
-    LTEXT           "2",IDC_STATIC,17,87,8,8
-    LTEXT           "5",IDC_STATIC,83,87,8,8
-    LTEXT           "8",IDC_STATIC,150,87,8,8
-    DEFPUSHBUTTON   "&OK",IDOK,80,103,35,14
-    PUSHBUTTON      "&cancel",IDCANCEL,119,103,42,14
-END
-
 IDD_FILEPREVIEW DIALOGEX 0, 0, 132, 95
 STYLE DS_SETFONT | DS_3DLOOK | DS_CONTROL | WS_CHILD | WS_VISIBLE | WS_CLIPSIBLINGS
 FONT 8, "MS Sans Serif", 0, 0, 0x1
@@ -668,10 +638,10 @@ BEGIN
     IDD_VIDEO, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 206
         VERTGUIDE, 45
         TOPMARGIN, 7
-        BOTTOMMARGIN, 152
+        BOTTOMMARGIN, 153
     END
 
     IDD_EFF7, DIALOG
@@ -754,12 +724,8 @@ BEGIN
         BOTTOMMARGIN, 152
     END
 
-    IDD_FIR, DIALOG
+    IDD_FILEPREVIEW, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 161
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 117
     END
 
     IDD_CHEAT, DIALOG
