FPGA: added INT for DMA with priority, Docs: updated

--- a/.hgignore
+++ b/.hgignore
@@ -2,61 +2,38 @@ syntax: glob
 pentevo/unreal/Unreal/bin/Debug/*
 pentevo/unreal/Unreal/bin/Release/*
 pentevo/unreal/Unreal/bin/tmp/*
-pentevo/unreal/Unreal_2010.suo
-pentevo/unreal/Unreal_2010.sdf
+pentevo/avr/current/default/*
+pentevo/fpga/current/quartus/db/*
 pentevo/unreal/Unreal/Unreal.vcxproj.user
 pentevo/unreal/Unreal/Unreal.vcproj.TSL.User.user
 pentevo/unreal/Unreal/Unreal.aps
-pentevo/unreal/robo.spg
-pentevo/unreal/cfparallax.spg
-pentevo/unreal/WORK.TRD
-pentevo/unreal/Unreal_2010.opensdf
-pentevo/unreal/Unreal_2008.suo
-pentevo/unreal/Unreal_2008.ncb
-pentevo/tools/spgbld/src/spgbld/test/spgbld.pdb
-pentevo/tools/spgbld/src/spgbld/test/spgbld.ilk
+pentevo/unreal/*.spg
+pentevo/unreal/*.trd
+pentevo/unreal/*.TRD
+*.sdf
+*.opensdf
+*.suo
+*.ncb
+*.pdb
+*.ilk
+*.o
+*.o.d
 pentevo/tools/spgbld/src/spgbld/test/spgbld.exe
-pentevo/tools/spgbld/src/spgbld/Debug/vc100.pdb
-pentevo/tools/spgbld/src/spgbld/Debug/vc100.idb
-pentevo/tools/spgbld/src/spgbld/Debug/stdafx.obj
-pentevo/tools/spgbld/src/spgbld/Debug/stdafx.cod
+*.idb
+*.obj
+*.cod
 pentevo/tools/spgbld/src/spgbld/Debug/spgbld_manifest.rc
-pentevo/tools/spgbld/src/spgbld/Debug/spgbld.pch
-pentevo/tools/spgbld/src/spgbld/Debug/spgbld.log
+*.pch
+*.log
 pentevo/tools/spgbld/src/spgbld/Debug/spgbld.lastbuildstate
 pentevo/tools/spgbld/src/spgbld/Debug/spgbld.exe.intermediate.manifest
 pentevo/tools/spgbld/src/spgbld/Debug/spgbld.exe.embed.manifest.res
 pentevo/tools/spgbld/src/spgbld/Debug/spgbld.exe.embed.manifest
-pentevo/tools/spgbld/src/spgbld/Debug/rc.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/rc.read.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/rc.command.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/mt.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/mt.read.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/mt.command.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/msg.obj
-pentevo/tools/spgbld/src/spgbld/Debug/msg.cod
-pentevo/tools/spgbld/src/spgbld/Debug/main.obj
-pentevo/tools/spgbld/src/spgbld/Debug/main.cod
-pentevo/tools/spgbld/src/spgbld/Debug/link.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link.read.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link.command.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link.1908.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link.1908.read.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link.1908-cvtres.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link.1908-cvtres.read.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link-cvtres.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/link-cvtres.read.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/func.obj
-pentevo/tools/spgbld/src/spgbld/Debug/func.cod
-pentevo/tools/spgbld/src/spgbld/Debug/cl.command.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/CL.write.1.tlog
-pentevo/tools/spgbld/src/spgbld/Debug/CL.read.1.tlog
-pentevo/tools/spgbld/src/spgbld.suo
-pentevo/tools/spgbld/src/spgbld.sdf
+*.tlog
 pentevo/rom/src/tsfat.asm
-pentevo/rom/src/ts-bios.map
-pentevo/rom/src/ts-bios.lst
-pentevo/rom/src/sysvars.bin.hst
+*.map
+*.lst
+*.hst
 pentevo/rom/src/sysvars.asm
 pentevo/rom/src/starter.map
 pentevo/rom/src/starter.bin
