--- a/.hgignore
+++ b/.hgignore
@@ -42,3 +42,21 @@ pentevo/rom/src/rslsys.asm
 pentevo/rom/src/866_code.fnt.hst
 pentevo/rom/src/866_code.asm
 pentevo/rom/bin/TS-BIOS.$C
+pentevo/fpga/current/quartus/top_assignment_defaults.qdf
+pentevo/fpga/current/quartus/top.tan.summary
+pentevo/fpga/current/quartus/top.tan.rpt
+pentevo/fpga/current/quartus/top.srf
+pentevo/fpga/current/quartus/top.sof.orig
+pentevo/fpga/current/quartus/top.qws
+pentevo/fpga/current/quartus/top.pin
+pentevo/fpga/current/quartus/top.map.summary
+pentevo/fpga/current/quartus/top.map.smsg
+pentevo/fpga/current/quartus/top.map.rpt
+pentevo/fpga/current/quartus/top.flow.rpt
+pentevo/fpga/current/quartus/top.fit.summary
+pentevo/fpga/current/quartus/top.fit.rpt
+pentevo/fpga/current/quartus/top.done
+pentevo/fpga/current/quartus/top.asm.rpt
+pentevo/fpga/current/quartus/serv_req_info.txt
+pentevo/fpga/current/quartus/incremental_db/compiled_partitions/top.root_partition.map.kpt
+pentevo/fpga/current/quartus/incremental_db/README
