WC: added new plug-in (IFF/ILBM Viewer), added new parameters into ini file (CPUfreq and SPIR), added indication of current dir path.

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -1,5 +1,9 @@
 Wild Commander configuration file v0.2
 
+[SETUP]
+CPU_FREQ=2; 0=3.5MHz, 1=7MHz, 2=14MHz, 3=14+MHz(cache always off)
+SPIR=0; 0-disabled, 1-enabled (get positions from RAM)
+
 [PLUGINS]
 MOUNTER .WMF
 FILE_CR .WMF
@@ -8,6 +12,7 @@ WP333_6 .WMF
 GSPLAYER.WMF
 VIDEO_PL.WMF
 BMPV    .WMF
+ILBMVIEW.WMF
 TAPM    .WMF
 SCRSAVER.WMF
 
