Unreal: updated WC, CMOS, ini, added temporary debug checkers

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -290,7 +290,7 @@ RamSize=2048    ; ngs ram size 2048, 4096
 
 [ZC]            ; Z-Controller settings
 ; sdcard image
-SDCARD=d:\VM\ZX\wc.img
+SDCARD=wc.img
 
 
 [SAA1099]
@@ -387,7 +387,7 @@ CDROM=;ASPI;SPTI  ; SPTI (native WinNT) or ASPI (use 3rd-party library wnaspi32.
 ; for image file, specify filename with full path, else it'll not work
 
 ; master device. specify image filename or <MODEL,SERIAL> to use real drive
-Image0=d:\VM\ZX\wc.img
+Image0=wc.img
 CHS0=1572/16/63  ; max size, accessible through CHS. not used for real drive
 LBA0=0	     ; max size, accessible through LBA. not used for real drive
 HD0RO=0         ; read only flag
