--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -233,6 +233,66 @@ DetectModel=0
 ;AtariPreset=fl_shark_red_palette
 AtariPreset=none
 
+; ffmpeg settings
+; exec:       path and name of ffmpeg executable (without quotes)
+; newconsole: 1 - open new console for ffmpeg output,
+;             0 - print ffmpeg output into emul's console (useful for debug)
+; parm:       encoding settings (see ffmpeg doc)
+; vout:       output video file name (use '#' sign for sequence number substitution)
+ffmpeg.exec=ffmpeg.exe
+ffmpeg.newconsole=1
+
+; ffmpeg encoding options
+; -ss 00:00:00.500   - skip first 500 ms (skip 25 frames with status line)
+; -af volume=3.0     - gain sound volume by 3
+; -vf "..."          - apply video filter
+; -r 25              - set 25 fps
+; -c:a ...           - set audio codec ("copy" for uncompressed wav)
+; -c:v ...           - set video codec ("copy" for uncompressed rgb24)
+; -b:a 320k          - set bitrate for audio
+; -b:v 2800k         - set bitrate for video
+
+;# mp3:320kbps, x264:baseline,10
+ffmpeg.parm=-c:a libmp3lame -b:a 320k -af volume=3.000000 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -ss 00:00:00.500
+ffmpeg.vout=video#.avi
+
+;# mp3:320kbps, x264:lossless
+;ffmpeg.parm=-c:a libmp3lame -b:a 320k -af volume=3.000000 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -crf 0 -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# wav, x264:lossless
+;ffmpeg.parm=-c:a copy -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -crf 0 -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# uncompressed
+;ffmpeg.parm=-c:a copy -c:v copy -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# Image sequence: PNG
+;ffmpeg.parm=
+;ffmpeg.vout=video#_%06d.png
+
+;# PAL DVD video
+;  MUST use picture size greater than 720x576 (for example, DOUBLE SIZE and COMPLETE border)!
+;ffmpeg.parm=-af volume=3.000000 -bf 2 -vf "crop=720:576,tinterlace=mode=interlacex2" -aspect 4:3 -target pal-dvd -r 25 -b:v 2800k -ss 00:00:00.500
+;ffmpeg.vout=video#.mpg
+
+;# PAL DVD video
+;  MUST use picture size lower than 720x576 (and DOUBLE SIZE for correct interlace)!
+;ffmpeg.parm=-af volume=3.000000 -bf 2 -vf "pad=720:576:(ow-iw)/2:(oh-ih)/2,tinterlace=mode=interlacex2" -aspect 4:3 -target pal-dvd -r 25 -b:v 2800k -ss 00:00:00.500
+;ffmpeg.vout=video#.mpg
+
+;# RTMP streaming: justin.tv
+;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -f flv 
+;ffmpeg.vout=rtmp://live.justin.tv/app/live_74829844_mfrdpoeg034tn03gn03ring3f0rngc
+
+;# RTMP streaming: own3d.tv
+;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -f flv 
+;ffmpeg.vout=rtmp://live.eu.own3d.tv/live/b8493921_949585_kjhb5632l3l1
+
+;# RTMP streaming: twitch.tv
+;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -bufsize 1835k -f flv
+;ffmpeg.vout=rtmp://live.justin.tv/app/live_sub_5b8ed4fae83fe83e920227337beab7e73b7a3ba3
 
 [BETA128]
 Beta128=1
