--- a/pentevo/unreal/Unreal/Unreal.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal.vcxproj
@@ -114,6 +114,7 @@
     </ClCompile>
     <ClCompile Include="saa1099.cpp" />
     <ClCompile Include="savesnd.cpp" />
+    <ClCompile Include="savevid.cpp" />
     <ClCompile Include="sdcard.cpp" />
     <ClCompile Include="snapshot.cpp" />
     <ClCompile Include="sndbuffer.cpp" />
@@ -215,6 +216,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="saa1099.h" />
     <ClInclude Include="savesnd.h" />
+    <ClInclude Include="savevid.h" />
     <ClInclude Include="sdcard.h" />
     <ClInclude Include="snapshot.h" />
     <ClInclude Include="sndbuffer.h" />
@@ -316,7 +318,7 @@ md "$(TargetDir)rom"
 copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)rom"
 copy "$(ProjectDir)cfg\hdd\wc.7z" "$(TargetDir)"
 cd /d "$(TargetDir)"
-7z e wc.7z
+7z e -y wc.7z
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -362,7 +364,7 @@ copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)..\tmp\rom"
 copy /y "$(TargetPath)" "$(TargetDir)..\tmp"
 copy "$(ProjectDir)cfg\hdd\wc.7z" "$(TargetDir)..\tmp"
 cd /d "$(TargetDir)..\tmp"
-7z e wc.7z
+7z e -y wc.7z
 del "$(TargetDir)..\tmp\wc.7z"
 7z a -t7z -r -mx9 -y -i!* ..\unreal.7z *.*
 </Command>
