Unreal: screenshot save to the same of unreal directory by default

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -222,6 +222,8 @@ SkipFrame=0
 SkipFrameMaxSpeed=64
 ; screenshot format: SCR, BMP, PNG
 ScrShot=PNG
+; screenshot directory.
+ScrShotDir=.
 ; when enabled, displays videocard vendor id, device id, card name
 ; (warning: sometimes uses driver database at http://crl.microsoft.com !!!)
 ; when disabled, faster startup but no additional information
