--- a/.hgignore
+++ b/.hgignore
@@ -1,15 +1,24 @@
 syntax: glob
-pentevo/unreal/Unreal/bin/Debug/*
-pentevo/unreal/Unreal/bin/Release/*
-pentevo/unreal/Unreal/bin/tmp/*
-pentevo/avr/current/default/*
-pentevo/fpga/current/quartus/db/*
-pentevo/unreal/Unreal/Unreal.vcxproj.user
-pentevo/unreal/Unreal/Unreal.vcproj.TSL.User.user
-pentevo/unreal/Unreal/Unreal.aps
-pentevo/unreal/*.spg
-pentevo/unreal/*.trd
-pentevo/unreal/*.TRD
+*.idb
+*.obj
+*.cod
+*.pch
+*.log
+*.manifest.res
+*.manifest
+*.tlog
+*.map
+*.lst
+*.hst
+*.qdf
+*.qws
+*.pin
+*.summary
+*.smsg
+*.rpt
+*.done
+*/db/*
+*/incremental_db/*
 *.sdf
 *.opensdf
 *.suo
@@ -18,22 +27,19 @@ pentevo/unreal/*.TRD
 *.ilk
 *.o
 *.o.d
+pentevo/unreal/Unreal/bin/Debug/*
+pentevo/unreal/Unreal/bin/Release/*
+pentevo/unreal/Unreal/bin/tmp/*
+pentevo/avr/current/default/*
+pentevo/unreal/Unreal/Unreal.vcxproj.user
+pentevo/unreal/Unreal/Unreal.vcproj.TSL.User.user
+pentevo/unreal/Unreal/Unreal.aps
+pentevo/unreal/*.spg
+pentevo/unreal/*.trd
+pentevo/unreal/*.TRD
 pentevo/tools/spgbld/src/spgbld/test/spgbld.exe
-*.idb
-*.obj
-*.cod
 pentevo/tools/spgbld/src/spgbld/Debug/spgbld_manifest.rc
-*.pch
-*.log
-pentevo/tools/spgbld/src/spgbld/Debug/spgbld.lastbuildstate
-pentevo/tools/spgbld/src/spgbld/Debug/spgbld.exe.intermediate.manifest
-pentevo/tools/spgbld/src/spgbld/Debug/spgbld.exe.embed.manifest.res
-pentevo/tools/spgbld/src/spgbld/Debug/spgbld.exe.embed.manifest
-*.tlog
 pentevo/rom/src/tsfat.asm
-*.map
-*.lst
-*.hst
 pentevo/rom/src/sysvars.asm
 pentevo/rom/src/starter.map
 pentevo/rom/src/starter.bin
@@ -42,21 +48,4 @@ pentevo/rom/src/rslsys.asm
 pentevo/rom/src/866_code.fnt.hst
 pentevo/rom/src/866_code.asm
 pentevo/rom/bin/TS-BIOS.$C
-pentevo/fpga/current/quartus/top_assignment_defaults.qdf
-pentevo/fpga/current/quartus/top.tan.summary
-pentevo/fpga/current/quartus/top.tan.rpt
-pentevo/fpga/current/quartus/top.srf
-pentevo/fpga/current/quartus/top.sof.orig
-pentevo/fpga/current/quartus/top.qws
-pentevo/fpga/current/quartus/top.pin
-pentevo/fpga/current/quartus/top.map.summary
-pentevo/fpga/current/quartus/top.map.smsg
-pentevo/fpga/current/quartus/top.map.rpt
-pentevo/fpga/current/quartus/top.flow.rpt
-pentevo/fpga/current/quartus/top.fit.summary
-pentevo/fpga/current/quartus/top.fit.rpt
-pentevo/fpga/current/quartus/top.done
-pentevo/fpga/current/quartus/top.asm.rpt
 pentevo/fpga/current/quartus/serv_req_info.txt
-pentevo/fpga/current/quartus/incremental_db/compiled_partitions/top.root_partition.map.kpt
-pentevo/fpga/current/quartus/incremental_db/README
